# Driver

./: .replit  app.py  auth.py  generate_icons.py  models.py  package-lock.json  pyproject.toml  replit.md
attached_assets/: street_driving_dark_draft_1756609706220.json  street_driving_dark_orbis_draft_1756606184600.json
instance/: driver_ratings.db
static/: manifest.json  sw.js
static/css/: icons.css  style.css
static/js/: app.js  icons.js  monochrome_light_orbis_draft.json  pwa.js  tomtom-style.json  traffic.js
templates/: admin.html  base.html  dashboard.html  index.html  login.html  map.html  profile.html  ranking.html  ranking_users.html  register.html  search.html  statistics.html  traffic.html  vehicle_detail.html
