[project]
name = "driver-rating-app"
version = "0.1.0"
description = "Driver Rating Application - A Flask-based platform for rating and reviewing drivers"
requires-python = ">=3.11,<3.13"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
]
